--- a/Web.Statu/Views/Insolvence/_Status.cshtml
+++ b/Web.Statu/Views/Insolvence/_Status.cshtml
@@ -22,7 +22,7 @@
         }
 </style>
 
-<div class="row">
+<div class="row" style="padding:25px 0 25px 0;">
     <div class="col-xs-12">
         @{
             var prgs = Model.Rizeni.StavRizeniProgress();
@@ -71,3 +71,4 @@
 
     </div>
 </div>
+
