--- a/Web.Statu/Views/Insolvence/_OddilDokumenty.cshtml
+++ b/Web.Statu/Views/Insolvence/_OddilDokumenty.cshtml
@@ -11,8 +11,7 @@
 <table id="@tableId" class="table table-condensed table-striped table-hover">
 	<thead>
 		<tr>
-			<th>Popis</th>
-			<th>Zveřejněno</th>
+			<th>Dokument</th>
 			<th></th>
 			<th></th>
 		</tr>
@@ -22,21 +21,24 @@
         {
             string hlres = HlidacStatu.Lib.ES.Highlighter.HighlightContent(highlightingData, "dokumenty.plainText", item.PlainText);
 
-            <tr>
-                <td>@item.Popis</td>
-                <td style="width:100px">@item.DatumVlozeni.ToShortDateString()</td>
-                <td style="width:80px"><a href="@item.Url"><i class="far fa-lg fa-file-alt" alt="textová podoba dokumentu"></i></a></td>
-                <td style="width:80px">
-                    @if (item.Lenght > 0)
-                    {
-                        <a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Id })"><i class="far fa-lg fa-file-pdf" alt="Originál"></i></a>
-                    }
-                </td>
-            </tr>
+        <tr>
+            <td>
+                <span class="text-muted small">@item.DatumVlozeni.ToShortDateString()</span>
+                <br />
+                @item.Popis
+            </td>
+            <td style="width:80px">
+                @if (item.Lenght > 0)
+                {
+                    <a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Id, qs=Request.QueryString["qs"] })"><i class="far fa-lg fa-file-alt" alt="textová podoba dokumentu"></i></a>
+                }
+            </td>
+            <td style="width:80px"><a href="@item.Url"><i class="far fa-lg fa-file-pdf" alt="Originál"></a></td>
+        </tr>
             if (hlres != null)
             {
                 <tr>
-                    <td colspan="2" style="border-top:none">
+                    <td colspan="3" style="border-top:none">
                         <div class="highlighting" style="padding-left:20px"><i class="far fa-search fa-lg fa-pull-left fa-border"></i>@Html.Raw(hlres)</div>
                     </td>
                 </tr>
@@ -51,7 +53,9 @@
 			'language': {
 				'url': '//cdn.datatables.net/plug-ins/1.10.19/i18n/Czech.json'
 			},
-			'order': [],
+            'ordering': false,
+            'paging': false,
+            'searching': false,
 			'lengthChange': false,
 			'info': false,
 		});
