--- a/Web.Statu/Views/Insolvence/_PeopleList.cshtml
+++ b/Web.Statu/Views/Insolvence/_PeopleList.cshtml
@@ -53,7 +53,8 @@
 				},
 				'order': [],
 				'lengthChange': false,
-				'info': false,
+                'info': false,
+                'pageLength': 5
 			});
 		});
 </script>
