--- a/Web.Statu/Views/Insolvence/_SearchForm.cshtml
+++ b/Web.Statu/Views/Insolvence/_SearchForm.cshtml
@@ -1,21 +1,30 @@
 ﻿@model HlidacStatu.Lib.ES.InsolvenceSearchResult
 
 
-<form method="get" action="/insolvence/hledat" class="form-inline" role="form">
-    <div id="insolvenceForm" class="input-group col-xs-12 custom-search-input">
-        <div class="input-group col-xs-12">
 
-            <input class="form-control input" id="Q" name="Q" placeholder="Název společnosti, osoby, IČO, spisová značka, ..." style="max-width: none;" type="text" value="@Model.Q">
+    <div class="form-search">
+        <label class="sr-only" for="I">Hledat v insolvenc&#xED;ch</label>
 
-            <span class="input-group-btn text-right" style="padding-right:20px;width:1px;">
-                <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                </button>
-                <button type="button" class="btn btn-info btn" style="left:10px;" data-toggle="modal" data-target="#search-query-help">Nápověda</button>
-            </span>
+        <form method="get" action="/insolvence/hledat"  class="form-search__input-wrapper"  role="form">
+                    <input class="form-search__input" id="Q" name="Q" placeholder="Název společnosti, osoby, IČO, spisová značka, ..." 
+                           style="max-width: none;" type="text" value="@Model.Q">
+
+                        <button class="form-search__btn" type="submit">Hledat pouze v insolvencích</button>
+        </form>
+        <div class="row">
+            <div class="col-sm-10 col-xs-12">
+                <p class="form-search__hint">
+                    Příklady hledání: 
+                </p>
+            </div>
+            <div class="col-sm-2 col-xs-12">
+                <p>
+                    <a class="form-search__hint pull-right" href="/napoveda">
+                        Jak vyhledávat?
+                    </a>
+                </p>
+            </div>
         </div>
-    </div>
-</form>
-@Html.Partial("_SearchFormHelp")
+        @Html.Partial("_SearchFormHelp")
 
-<div class="clearfix" style="padding-bottom:20px;"></div>
+        <div class="clearfix" style="padding-bottom:20px;"></div>
