--- a/Web.Statu/Views/Account/ResetPassword.cshtml
+++ b/Web.Statu/Views/Account/ResetPassword.cshtml
@@ -15,7 +15,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control"})
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
@@ -33,10 +33,28 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="text" name="zip" id="zip" value="" placeholder="Your Zip code" />
         </div>
     </div>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+    $(function () {
+        $('#zip').css({ "font-size": "1pt", "color": "white", "width": "1px", "border": "none"});
+    });
+
+    </script>
+    <noscript>
+        <style>
+            #zip {
+                font-size: 1pt;
+                color: white;
+                width: 1px;
+                border: none;
+            }
+        </style>
+    </noscript>
+
 }
