--- a/Web.Statu/Views/Account/Register.cshtml
+++ b/Web.Statu/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-sm-8">
             <input type="submit" class="btn btn-primary" value="Zaregistrovat" />
-            <input type="text" name="zip" id="zip" value="" placeholder="Your Zip code" />
+            <input type="text" name="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" id="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" value="" placeholder="Your Zip code" />
         </div>
     </div>
 }
