--- a/Web.Statu/Views/Account/ResetPassword.cshtml
+++ b/Web.Statu/Views/Account/ResetPassword.cshtml
@@ -33,7 +33,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Reset" />
-            <input type="text" name="zip" id="zip" value="" placeholder="Your Zip code" />
+            <input type="text" name="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" id="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" value="" placeholder="Your Zip code" />
         </div>
     </div>
 }
