--- a/Web.Statu/Views/Shared/Bot.cshtml
+++ b/Web.Statu/Views/Shared/Bot.cshtml
@@ -2,13 +2,13 @@
 
 @using HlidacStatu.Web.Models
 @{
-    ViewBag.Title = "Přihlášení";
+    ViewBag.Title = "Stránka pro roboty";
 }
 
     <div class="jumbotron">
         <h1>Zdravíme</h1>
         <p>Velmi nám chováním připomínáte robota a pro roboty tento server určen není.</p>
-        <p>Pokud jste člověk a přes náš formulář se nemůžete dostat, napište nám na kontaktní stránce. Jako člověk ji zde snadno najdete.</p>
+        <p>Pokud jste člověk a nemůžete se dostat naše stránky či přes náš formulář, napište nám na kontaktní stránce. Jako člověk ji zde snadno najdete.</p>
         <p>A taky je potřeba, abyste měli zapnutý javascript, jinak náš server nefunguje.</p>
 
     </div>
