--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -174,7 +174,7 @@
                                         <i class="far fa-arrow-@(rozdil<0 ? "down" : "up")"></i>
                                     </span>
                                     <br />
-                                    <span class="box-stats__progress-unit">oproti předchozímus</span>
+                                    <span class="box-stats__progress-unit">oproti předchozímu</span>
 
                                 </p>
                             </div>
@@ -218,7 +218,7 @@
                                         <i class="far fa-arrow-@(rozdil<0 ? "down" : "up")"></i>
                                     </span>
                                     <br />
-                                    <span class="box-stats__progress-unit">oproti předchozímus</span>
+                                    <span class="box-stats__progress-unit">oproti předchozímu</span>
 
                                 </p>
                             </div>
