--- a/Web.Statu/Views/Account/ResetPassword.cshtml
+++ b/Web.Statu/Views/Account/ResetPassword.cshtml
@@ -42,7 +42,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script>
     $(function () {
-        $('#zip').css({ "font-size": "1pt", "color": "white", "width": "1px", "border": "none"});
+        $('#@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)').css({ "font-size": "1pt", "color": "white", "width": "1px", "border": "none"});
     });
 
     </script>
